--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "mmm-jsontable",
+  "name": "mmm-FireflyBills",
   "version": "1.2.0",
   "description": "A module for the MagicMirror² project which creates a table filled with a list gathered from a json request.",
-  "dependencies": {
-    "node-fetch": "^3.3.1"
-  },
   "devDependencies": {
     "eslint": "^8.36.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.4"
   },
@@ -18,5 +15,8 @@
     "lint": "eslint . && prettier --check .",
     "lint:fix": "eslint --fix . && prettier --write .",
     "test": "npm run lint"
+  },
+  "dependencies": {
+    "axios": "^1.3.4"
   }
 }
