--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "npm run lint"
   },
   "dependencies": {
-    "axios": "^1.3.4"
+    "axios": "^1.3.4",
+    "moment": "^2.29.4"
   }
 }
