--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "MMM-FireflyBills",
-  "version": "1.2.0",
-  "description": "A module for the MagicMirror² project which creates a table filled with a list gathered from a json request.",
+  "version": "2.0.0",
+  "description": "MagicMirror module to display a list of bills from FireFly III",
   "devDependencies": {
     "eslint": "^8.36.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -10,6 +10,9 @@
     "eslint-plugin-json": "^3.1.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.8.4"
+  },
+  "repository": {
+    "url": "https://github.com/angeldeejay/MMM-FireflyBills"
   },
   "scripts": {
     "lint": "eslint . && prettier --check .",
