--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
   "name": "MMM-FireflyBills",
-  "version": "2.0.1",
+  "version": "2.5.0",
   "description": "MagicMirror module to display a list of bills from FireFly III",
-  "devDependencies": {
-    "eslint": "^8.36.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-json": "^3.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "prettier": "^2.8.4"
-  },
+  "main": "MMM-FireflyBills.js",
+  "author": "Andrés Vanegas <ukab72106@gmail.com>",
+  "license": "MIT",
   "repository": {
     "url": "https://github.com/angeldeejay/MMM-FireflyBills"
   },
+  "devDependencies": {
+    "prettier": "^2.8.4"
+  },
   "scripts": {
-    "lint": "eslint . && prettier --check .",
-    "lint:fix": "eslint --fix . && prettier --write .",
+    "lint": "prettier --check .",
+    "lint:fix": "prettier --write .",
     "test": "npm run lint"
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "axios-retry": "^3.4.0",
     "moment": "^2.29.4"
   }
 }
