--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "MMM-FireflyBills",
-  "version": "3.3.0",
+  "version": "3.3.1",
   "description": "MagicMirror module to display a list of bills from FireFly III",
   "main": "MMM-FireflyBills.js",
   "author": "Andrés Vanegas <ukab72106@gmail.com>",
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "fast-sort": "^3.4.1",
     "moment": "^2.29.4"
   }
 }
